--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "axios-jwt",
-  "version": "0.27.2",
+  "version": "1.7.6",
   "description": "Axios interceptor to store, use, and refresh tokens for authentication.",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -13,21 +13,22 @@
   "license": "WTFPL",
   "devDependencies": {
     "@types/axios": "^0.14.0",
-    "@types/jest": "^27.5.0",
-    "@types/jsonwebtoken": "^8.5.8",
-    "@typescript-eslint/eslint-plugin": "^5.22.0",
-    "@typescript-eslint/parser": "^5.22.0",
-    "eslint": "^8.14.0",
-    "jest": "^28.0.3",
-    "prettier": "^2.6.2",
-    "ts-jest": "^28.0.1",
-    "typescript": "^4.6.4"
+    "@types/jest": "^26.0.22",
+    "@types/jsonwebtoken": "^8.5.1",
+    "@typescript-eslint/eslint-plugin": "^4.21.0",
+    "@typescript-eslint/parser": "^4.21.0",
+    "eslint": "^7.24.0",
+    "jest": "^26.6.3",
+    "jsonwebtoken": "^8.5.1",
+    "prettier": "^2.2.1",
+    "ts-jest": "^26.5.4",
+    "typescript": "^4.2.4"
   },
   "peerDependencies": {
-    "axios": "^0.27.2"
+    "axios": "^0.27.0"
   },
   "dependencies": {
-    "jsonwebtoken": "^8.5.1"
+    "jwt-decode": "^3.1.2"
   },
   "scripts": {
     "build": "tsc",
